--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
  "compilerOptions": {
-   "module": "ESNext",
-   "target": "ES2020",
-   "moduleResolution": "Node",
-   "esModuleInterop": true
+   "target": "es5",
+   "module": "commonjs",
+   "outDir": "./dist",
+   "strict": true,
+   "esModuleInterop": true,
+   "skipLibCheck": true,
+   "forceConsistentCasingInFileNames": true
  }
 }
